samples/negative/resources/fp44/39.woff2
version https://git-lfs.github.com/spec/v1
oid sha256:06a0cb7c5493634610e076eb1909127d61bb9e34bfa6899e0958be0316f9e80f
size 13716
